--- a/index.html
+++ b/index.html
@@ -6,30 +6,39 @@
     <title>Seleção de Cidades e Envie uma Notificação</title>
     <!-- Incluindo o Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .bootstrap-tagsinput {
-            width: 100%;
-        }
-    </style>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body class="container">
     <h1 class="mt-5">Selecione as Cidades e Envie uma Notificação</h1>
 
     <div>
-        <p>Indique se você quer aplicar a Line ou Estabelecimento ou ambos</p>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" />
-            <label class="form-check-label" for="flexSwitchCheckDefault">Line</label>
+        <p>Indique se você quer aplicar a Line, Estabelecimento, ambos ou individual</p>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="option" id="optionLine" value="Line" />
+            <label class="form-check-label" for="optionLine">Line</label>
         </div>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked />
-            <label class="form-check-label" for="flexSwitchCheckChecked">Estabelecimento</label>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="option" id="optionEstabelecimento" value="Estabelecimento" />
+            <label class="form-check-label" for="optionEstabelecimento">Estabelecimento</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="option" id="optionBoth" value="Ambos" />
+            <label class="form-check-label" for="optionBoth">Ambos</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="option" id="optionIndividual" value="Individual" />
+            <label class="form-check-label" for="optionIndividual">Individual</label>
         </div>
     </div>
 
-    <div class="form-group">
+    <div id="citySelection" class="form-group">
         <label for="cityChecklist">Selecione as cidades para as quais as mensagens serão enviadas:</label>
         <div id="cityChecklist"></div>
+    </div>
+
+    <div id="emailInputDiv" class="form-group" style="display: none;">
+        <label for="emailInput">Digite o email da pessoa:</label>
+        <input type="email" id="emailInput" class="form-control" placeholder="Digite o email aqui" />
     </div>
 
     <div class="form-group">
