feat: adicionar botão 'Limpar' para resetar todos os campos do formulário e checklists
- Adicionado botão 'Limpar' ao lado do botão 'Enviar Notificação'.
- Implementada funcionalidade em JavaScript para resetar todos os campos do formulário, incluindo inputs de texto e checkboxes.
- Modificado o layout para incluir o novo botão.
- Atualizados os manipuladores de eventos para garantir que o formulário seja resetado corretamente ao clicar no botão 'Limpar'.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
 
     <button id="notifyBtn" class="btn btn-primary">Enviar Notificação</button>
+    <button id="clearBtn" class="btn btn-secondary">Limpar</button>
     <div id="response"></div>
 
     <!-- Incluindo o jQuery -->
